---------------------------------------------------------------------------------------------------
Version: 0.0.54
Date: 20/12/2019
---------------------------------------------------------------------------------------------------
Version: 0.0.53
Date: 18/12/2019
  Scripting:
    - Minor rewrite for Quatron Charge sended by the Mobile Factory
  Bugfixes:
    - Fixed crash related to Internal Tanks Filter
---------------------------------------------------------------------------------------------------
Version: 0.0.53
Date: 18/12/2019
  Features:
    - Data Center and Internal Inventory Data Center now send Circuit Network Signals based on the content of their Inventory
---------------------------------------------------------------------------------------------------
Version: 0.0.52
Date: 18/12/2019
  Changes:
    - Dimensional Lab now accept all research materials to improve the compatibility with other Mods
  Bugfixes:
    - All structures of the Matter Serialization Technology are now correctly unlocked																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																											
---------------------------------------------------------------------------------------------------
Version: 0.0.51
Date: 17/12/2019
  Graphics:
    - Little adjustments to Matter Serialization Structures
  Changes:
    - Removed the fictive Red Cross Fluid
  Bugfixes:
    - Reduced a little the Mobile Factory Vehicle collision box to allow the Player to leave the drive seat in all directions